added part b mockups

--- a/html/algo.html
+++ b/html/algo.html
@@ -8,6 +8,24 @@
 
 <body>
     <h1>Algorithm</h1>
+    <fieldset>
+        <p id="name">
+            {Algorithm}
+        </p>
+        <p id="desc">
+            {Description}
+        </p>
+        <p id="class">
+            {Classification}
+        </p>
+        <button id="del">
+            Delete Algorithm
+        </button>
+    </fieldset>
+    
+    <button id="home">
+        Algopedia
+    </button>
 </body>
 <script src="../js/algo.js"></script>
 
