--- a/html/class.html
+++ b/html/class.html
@@ -8,6 +8,23 @@
 
 <body>
     <h1>Classification</h1>
+    <fieldset>
+        <p id="name">
+            {Algorithm}
+        </p>
+        <p id="desc">
+            {Description}
+        </p>
+        <p id = "parent">
+            {Parent}
+        </p>
+        <button id="del">
+            Delete Classification
+        </button>
+    </fieldset>
+    <button id="home">
+        Algopedia
+    </button>
 </body>
 <script src="../js/class.js"></script>
 
