--- a/html/imp.html
+++ b/html/imp.html
@@ -8,6 +8,30 @@
 
 <body>
     <h1>Implementation</h1>
+    <fieldset>
+        <p id="lang">
+            Programmed in {Language}
+        </p>
+        <p id="algo">
+            Implementation of {Algorithm}
+        </p>
+        <p>
+        <button id="down">
+            Download Code
+        </button>
+        </p>
+        <p>
+        <button id="addInst">
+            Add Problem Instance
+        </button>
+        </p>
+        <button id="del">
+            Delete Implementation
+        </button>
+    </fieldset>
+    <button id="home">
+        Algopedia
+    </button>
 </body>
 <script src="../js/imp.js"></script>
 
