--- a/html/admin.html
+++ b/html/admin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Algopedia</title>
+    <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
 </head>
 
 <body>
