--- a/html/home.html
+++ b/html/home.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Algopedia</title>
+    <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
 </head>
 
 <body>
     <h1>Algopedia Home</h1>
-
+    <img src="../algopediaLogo.png" alt="Algopedia Logo">
     <fieldset>
         <legend>Classification</legend>
         <button id="newClass">
