--- a/html/algo.html
+++ b/html/algo.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Algorithm</title>
+    <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
 </head>
 
 <body>
