--- a/html/login.html
+++ b/html/login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login Page</title>
+  <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
 </head>
 
 <body>
