get/post requests

--- a/html/algo.html
+++ b/html/algo.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+<fieldset>
+    <legend>Find Algorithm</legend>
+    <label>Algorithm ID</label>
+    <input type="text" id="algoID" />
+
+    <button id="algoSearch">
+        Find Algorithm
+    </button>
+</fieldset>
     <h1>Algorithm</h1>
     <fieldset>
         <p id="name">
