--- a/html/class.html
+++ b/html/class.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <fieldset>
+        <legend>Find Classification</legend>
+        <label>Classification ID</label>
+        <input type="text" id="classID" />
+    
+        <button id="classSearch">
+            Find Classification
+        </button>
+    </fieldset>
     <h1>Classification</h1>
     <fieldset>
         <p id="name">
@@ -15,9 +24,6 @@
         </p>
         <p id="desc">
             {Description}
-        </p>
-        <p id = "parent">
-            {Parent}
         </p>
         <button id="del">
             Delete Classification
