--- a/html/imp.html
+++ b/html/imp.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <fieldset>
+        <legend>Find Implementation</legend>
+        <label>Implementation ID</label>
+        <input type="text" id="impID" />
+    
+        <button id="impSearch">
+            Find Implementation
+        </button>
+    </fieldset>
     <h1>Implementation</h1>
     <fieldset>
         <p id="lang">
