--- a/html/newImp.html
+++ b/html/newImp.html
@@ -17,7 +17,7 @@
         </p>
         <p>
             <label>Algorithm ID</label>
-            <input type="text" id="pass" />
+            <input type="text" id="id" />
         </p>
         <p>
             <label>Upload Code</label>
