--- a/html/home.html
+++ b/html/home.html
@@ -54,6 +54,16 @@
         </p>
     </fieldset>
 
+    <div id = "data">
+        <OL id = "classifications">
+            <LI>Main Heading
+            <UL>
+            <LI>List item 1
+            <LI>List item 2
+            </UL>
+            </UL>
+        </OL>
+    </div>
 </body>
 <script src="../js/home.js"></script>
 
