--- a/html/newUser.html
+++ b/html/newUser.html
@@ -17,11 +17,11 @@
         </p>
         <p>
             <label>Password</label>
-            <input type="text" id="pass" />
+            <input type="password" id="pass" />
         </p>
         <p>
             <label>Confirm Password</label>
-            <input type="text" id="confirm" />
+            <input type="password" id="confirm" />
         </p>
         <button id="newUser">
             Create Account
