--- a/html/benchmark.html
+++ b/html/benchmark.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Algopedia</title>
+    <title>Benchmarks</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="home.html">ALGOPEDIA</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li ><a href="home.html">Home</a></li>
             <li><a href="newClass.html">New Classification</a></li>
             <li><a href="newAlgo.html">New Algorithm</a></li>
             <li><a href="newImp.html">New Implementation</a></li>
@@ -32,8 +32,7 @@
           </ul>
         </div>
       </nav>
-
-    <div class="wrapper">
+      <div class="wrapper">
         <div class="sidebar">
             <div class="logo">
                 <img src="../algopediaLogo.png">
@@ -44,17 +43,29 @@
             <div id = "data"></div>
         </div>
         <div class="main_content">
-            <h1>Welcome to Algopedia</h1>
-            <h4>The free algorithm encyclopedia that anyone can contribute to!</h4>
-            <div class="header">Welcome!! This website was created by Team Despina.</div>  
-            <div class="info">
-                <div class="iterationnum">Currently developing Iteration 2.</div>
-                <div> In this new iteration we have added functionality to remove...</div>
-          </div>
+            <h2>Algorithm name</h2>
+            <h2>Benchmarks</h2>
+            <table class="table" id="benchmarks">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Language</th>
+                    <th scope="col">Cores</th>
+                    <th scope="col">CPU</th>
+                    <th scope="col">Threads</th>
+                    <th scope="col">L1</th>
+                    <th scope="col">L2</th>
+                    <th scope="col">L3</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Execution Time</th>
+                    <th scope="col">Problem Instance</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+            </table>
         </div>
     </div>
 
 </body>
-<script src="../js/home.js"></script>
+
 
 </html>
