--- a/html/newClass.html
+++ b/html/newClass.html
@@ -22,8 +22,8 @@
             <li class="active"><a href="newClass.html">New Classification</a></li>
             <li><a href="newAlgo.html">New Algorithm</a></li>
             <li><a href="newImp.html">New Implementation</a></li>
-            <li><a href="#">New Problem Instance</a></li>
-            <li><a href="#">New Benchmark</a></li>
+            <li><a href="newProbInst.html">New Problem Instance</a></li>
+            <li><a href="newBenchmark.html">New Benchmark</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
@@ -45,7 +45,7 @@
         </div>
         <div class="main_content">
             <h2>Create Classification</h2>
-            <fieldset>
+            <form>
                 <legend>New Classification</legend>
                 <p>
                     <label>Name</label>
@@ -62,7 +62,7 @@
                 <button id="newClass">
                     Create Classification
                 </button>
-            </fieldset>
+            </form>
         </div>
     </div>  
 
