--- a/html/newProbInst.html
+++ b/html/newProbInst.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Algopedia</title>
+    <title>Create Problem Instance</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="shortcut icon" type="image/png" href="../algopediaLogo.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -18,11 +18,11 @@
             <a class="navbar-brand" href="home.html">ALGOPEDIA</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li ><a href="home.html">Home</a></li>
             <li><a href="newClass.html">New Classification</a></li>
             <li><a href="newAlgo.html">New Algorithm</a></li>
             <li><a href="newImp.html">New Implementation</a></li>
-            <li><a href="newProbInst.html">New Problem Instance</a></li>
+            <li class="active"><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -32,8 +32,7 @@
           </ul>
         </div>
       </nav>
-
-    <div class="wrapper">
+      <div class="wrapper">
         <div class="sidebar">
             <div class="logo">
                 <img src="../algopediaLogo.png">
@@ -44,17 +43,22 @@
             <div id = "data"></div>
         </div>
         <div class="main_content">
-            <h1>Welcome to Algopedia</h1>
-            <h4>The free algorithm encyclopedia that anyone can contribute to!</h4>
-            <div class="header">Welcome!! This website was created by Team Despina.</div>  
-            <div class="info">
-                <div class="iterationnum">Currently developing Iteration 2.</div>
-                <div> In this new iteration we have added functionality to remove...</div>
-          </div>
+            <h2>New Problem Instance</h2>
+            <form>
+                <label for="algorithm">Algorithm:</label>
+                <select id="algorithm" name="algorithm" required></select><br>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="description">Description:</label>
+                <input type="text" id="description" name="description" required><br>
+                <label for="dataSet">Data set:</label>
+                <input type="file" id="dataSet" name="dataSet" required><br>
+                <input type="submit">
+            </form>
         </div>
     </div>
 
 </body>
-<script src="../js/home.js"></script>
+
 
 </html>
