--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -43,11 +43,11 @@
             <div id = "data"></div>
         </div>
         <div class="main_content">
-            <h2>Algorithm name</h2>
+            <h2 id="algorithmName">Algorithm name</h2>
         </div>
     </div>
 
 </body>
-
+<script src="../js/algo.js"></script>
 
 </html>
