--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -44,6 +44,7 @@
         </div>
         <div class="main_content">
             <h2 id="algorithmName">Algorithm name</h2>
+            <div id="implementations"></div>
         </div>
     </div>
 
