--- a/html/newImp.html
+++ b/html/newImp.html
@@ -53,7 +53,7 @@
                 </p>
                 <p>
                     <label>Algorithm ID</label>
-                    <input type="text" id="id" />
+                    <select id="id"></select>
                 </p>
                 <p>
                     <label>Upload Code</label>
