--- a/html/newImp.html
+++ b/html/newImp.html
@@ -52,8 +52,8 @@
                     <input type="text" id="lang" />
                 </p>
                 <p>
-                    <label>Algorithm ID</label>
-                    <select id="id"></select>
+                    <label>Algorithm</label>
+                    <select id="algorithm"></select>
                 </p>
                 <p>
                     <label>Upload Code</label>
