--- a/html/newProbInst.html
+++ b/html/newProbInst.html
@@ -46,13 +46,13 @@
             <h2>New Problem Instance</h2>
             <form>
                 <label for="algorithm">Algorithm:</label>
-                <select id="algorithm" name="algorithm" required></select><br>
+                <select id="algorithm" required></select><br>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
+                <input type="text" id="name" required><br>
                 <label for="description">Description:</label>
-                <input type="text" id="description" name="description" required><br>
+                <input type="text" id="description" required><br>
                 <label for="dataSet">Data set:</label>
-                <input type="file" id="dataSet" name="dataSet" required><br>
+                <input type="file" id="dataSet" required><br>
                 <input type="submit">
             </form>
         </div>
