--- a/html/newBenchmark.html
+++ b/html/newBenchmark.html
@@ -62,6 +62,8 @@
                 <input type="text" name="l2" id="l2" required><br>
                 <label for="l3">L3:</label>
                 <input type="text" name="l3" id="l3" required><br>
+                <label for="runtime">Runtime:</label>
+                <input type="text" name="runtime" id="runtime" required><br>
                 <input type="submit" value="submit">
             </form>
         </div>
