--- a/html/newImp.html
+++ b/html/newImp.html
@@ -24,6 +24,7 @@
             <li class="active"><a href="newImp.html">New Implementation</a></li>
             <li><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
+            <li><a href="remove.html">Remove</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
