--- a/html/remove.html
+++ b/html/remove.html
@@ -56,7 +56,7 @@
                 </select><br>
                 <label for="selectItem">Select Item</label>
                 <select id="selectItem"></select><br>
-                <button onclick="remove()">Remove</button>
+                <button onclick="remove(event)">Remove</button>
             </form>
         </div>
     </div>
