byte array works

--- a/html/newImp.html
+++ b/html/newImp.html
@@ -59,7 +59,7 @@
                     <label>Upload Code</label>
                     <input type="file" id="impFile">
                 </p>
-                <button id="newImp">
+                <button id="newImp" onclick="submitNewImp(event)">
                     Create Implementation
                 </button>
             </form>
