--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -43,8 +43,11 @@
             <div id = "data"></div>
         </div>
         <div class="main_content">
-            <h2 id="algorithmName">Algorithm name</h2>
+            <h2 id="algorithmName"></h2>
+            <h5 id="description"><h5>
+            <h3>Implementations</h3>
             <div id="implementations"></div>
+            <button onclick="loadBenchmarks(event)">View Benchmark</button>
         </div>
     </div>
 
