--- a/html/newProbInst.html
+++ b/html/newProbInst.html
@@ -53,7 +53,9 @@
                 <input type="text" id="description" required><br>
                 <label for="dataSet">Data set:</label>
                 <input type="file" id="dataSet" required><br>
-                <input type="submit">
+                <button id="newProbInst" onclick="submitNewProbInst(event)">
+                  Submit
+              </button>
             </form>
         </div>
     </div>
