--- a/html/benchmark.html
+++ b/html/benchmark.html
@@ -43,7 +43,7 @@
             <div id = "data"></div>
         </div>
         <div class="main_content">
-            <h2>Algorithm name</h2>
+            <h2 id="algoname"></h2>
             <h2>Benchmarks</h2>
             <table class="table" id="benchmarks">
                 <thead class="thead-dark">
@@ -58,6 +58,7 @@
                     <th scope="col">Date</th>
                     <th scope="col">Execution Time</th>
                     <th scope="col">Problem Instance</th>
+                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -67,5 +68,5 @@
 
 </body>
 
-
+<script src="../js/benchmark.js"></script>
 </html>
