--- a/html/newClass.html
+++ b/html/newClass.html
@@ -55,10 +55,10 @@
                     <label>Description</label>
                     <input type="text" id="desc" />
                 </p>
-                <!-- <p>
-                    <label>Parent Classification ID (optional)</label>
-                    <input type="text" id="parent" />
-                </p> -->
+                <p>
+                    <label>Parent Classification (optional)</label>
+                    <select id="superClass"></select>
+                </p>
                 <button id="newClass">
                     Create Classification
                 </button>
