get user activity

--- a/html/remove.html
+++ b/html/remove.html
@@ -63,7 +63,7 @@
               <legend>User Activity</legend>
               <label for="selectItem">User: </label>
               <select id="selectUserItem"></select><br>
-              <button onclick="downloadActivity(e)">Download Activity</button>
+              <button onclick="downloadActivity(event)">Download Activity</button>
           </form>
         </div>
     </div>
