--- a/html/benchmark.html
+++ b/html/benchmark.html
@@ -24,10 +24,8 @@
             <li><a href="newImp.html">New Implementation</a></li>
             <li><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
-            <li><a href="remove.html">Remove</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
             <li id="login"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
         </div>
@@ -48,6 +46,7 @@
             <table class="table" id="benchmarks">
                 <thead class="thead-dark">
                 <tr>
+                    <th scope="col">Name</th>
                     <th scope="col">Language</th>
                     <th scope="col">Cores</th>
                     <th scope="col">CPU</th>
@@ -58,7 +57,6 @@
                     <th scope="col">Date</th>
                     <th scope="col">Execution Time</th>
                     <th scope="col">Problem Instance</th>
-                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody></tbody>
