--- a/html/newAlgo.html
+++ b/html/newAlgo.html
@@ -19,7 +19,7 @@
           </div>
           <ul class="nav navbar-nav">
             <li ><a href="home.html">Home</a></li>
-            <li><a href="newClass.html">New Classification</a></li>
+            <li><a href="newClass.html">New ALgorithm</a></li>
             <li class="active"><a href="newAlgo.html">New Algorithm</a></li>
             <li><a href="newImp.html">New Implementation</a></li>
             <li><a href="newProbInst.html">New Problem Instance</a></li>
@@ -56,10 +56,11 @@
                     <label>Classification</label>
                     <select id="class"></select>
                 </p>
-                <button id="newAlgo">
-                    Create Algorithm
-                </button>
+
             </form>
+            <button id="newAlgo" onclick="newAlgo(event)">
+                Create Algorithm
+            </button>
         </div>
     </div>
 
