--- a/html/newClass.html
+++ b/html/newClass.html
@@ -57,10 +57,11 @@
                     <label>Parent Classification (optional)</label>
                     <select id="superClass"></select>
                 </p>
-                <button id="newClass">
-                    Create Classification
-                </button>
             </form>
+            
+            <button id="newClass" onclick="newClass(event)">
+                Create Classification
+            </button>
         </div>
     </div>  
 
