--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -45,6 +45,8 @@
             <h5 id="description"><h5>
             <h3>Implementations</h3>
             <div id="implementations"></div>
+            <h3>Problem Instances</h3>
+            <div id="probInst"></div>
             <button onclick="loadBenchmarks(event)">View Benchmark</button>
         </div>
     </div>
