--- a/html/newProbInst.html
+++ b/html/newProbInst.html
@@ -24,6 +24,7 @@
             <li><a href="newImp.html">New Implementation</a></li>
             <li class="active"><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
+            <li><a href="manage.html">Manage</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="login"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
