--- a/html/newAlgo.html
+++ b/html/newAlgo.html
@@ -62,6 +62,9 @@
             <button id="newAlgo" onclick="newAlgo(event)">
                 Create Algorithm
             </button>
+            <p id="nullUser">
+                To submit a classification, please log in.
+            </p>
         </div>
     </div>
 
