--- a/html/newClass.html
+++ b/html/newClass.html
@@ -63,6 +63,9 @@
             <button id="newClass" onclick="newClass(event)">
                 Create Classification
             </button>
+            <p id="nullUser">
+                To submit a classification, please log in.
+            </p>
         </div>
     </div>  
 
