--- a/html/newImp.html
+++ b/html/newImp.html
@@ -61,6 +61,9 @@
                 <button id="newImp" onclick="submitNewImp(event)">
                     Create Implementation
                 </button>
+                <p id="nullUser">
+                    To submit a classification, please log in.
+                </p>
             </form>
         </div>
     </div>
