--- a/html/newProbInst.html
+++ b/html/newProbInst.html
@@ -55,6 +55,9 @@
                 <button id="newProbInst" onclick="submitNewProbInst(event)">
                   Submit
               </button>
+              <p id="nullUser">
+                To submit a classification, please log in.
+              </p>
             </form>
         </div>
     </div>
