--- a/html/manage.html
+++ b/html/manage.html
@@ -25,6 +25,7 @@
             <li><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
             <li class="active"><a href="manage.html">Manage</a></li>
+            <li><a href="remove.html">Remove</a>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="login"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -42,7 +43,7 @@
             <h3>Catalog</h3>
             <div id = "data"></div>
         </div>
-        <div class="main_content">
+        <div class="main_content"> 
           <form>
             <legend>Merge Classification</legend>
             <p>
