--- a/html/remove.html
+++ b/html/remove.html
@@ -24,7 +24,8 @@
             <li><a href="newImp.html">New Implementation</a></li>
             <li><a href="newProbInst.html">New Problem Instance</a></li>
             <li><a href="newBenchmark.html">New Benchmark</a></li>
-            <li><a href="manage.html">Manage</a></li>
+            <li id="manage"><a href="manage.html">Manage</a></li>
+            <li class="active"><a href="remove.html">Remove</a>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="login"><a href="index.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -59,16 +60,12 @@
                 </div>
                 <label for="selectItem">Select Item: </label>
                 <select id="selectItem"></select><br>
-                <button onclick="remove(event)">Remove</button>
+                <button id="remove" onclick="remove(event)">Remove</button>
+                <p id="nullUser">
+                  To submit a classification, please log in.
+                </p>
             </form>
             <br><br>
-            <form id="userForm">
-              <legend>User Activity</legend>
-              <label for="selectItem">User: </label>
-              <select id="selectUserItem"></select><br>
-              <button onclick="downloadActivity(event)">Download Activity</button>
-              <button onclick="removeUser(event)">Delete User</button>
-          </form>
         </div>
     </div>
 
