--- a/html/home.html
+++ b/html/home.html
@@ -48,8 +48,15 @@
             <h4>The free algorithm encyclopedia that anyone can contribute to!</h4>
             <div class="header">Welcome!! This website was created by Team Despina.</div>  
             <div class="info">
-                <div class="iterationnum">Currently developing Iteration 2.</div>
-                <div> In this new iteration we have added functionality to remove...</div>
+                <div class="iterationnum">Currently viewing Iteration 3.</div>
+                <div>In order to perform all the tasks follow these instructions.
+                  <br> <b>To create elements... </b> use the top navigation bar. Fill out the forms and press submit.
+                  <br> <b>To remove elements... </b> click the remove tab.
+                  <br> <b>To view an algorithm... </b> click on the algorithm name in the catalog on the left.
+                  <br> <b>To view an implementation, problem instance or benchmark... </b> click on the algorithm name in the catalog on the left. Then click on the names to download the files. For benchmarks click on the button. 
+                  <br> <b> MAKE SURE YOU ARE LOGED IN IF YOU WANT TO SUBMIT ENTRIES. AS AN ANNONYMOUS USER YOU CAN ONLY VIEW CONTENT AND SUBMMIT BENCHMARKS. </b>
+                  <br> For admin tools visit /admin.html. For user actions you can select the user and use the button to download a csv containing all actions performed by that user.
+                </div>
           </div>
         </div>
     </div>
