--- a/html/remove.html
+++ b/html/remove.html
@@ -61,7 +61,7 @@
                 <select id="selectItem"></select><br>
                 <button id="remove" onclick="remove(event)">Remove</button>
                 <p id="nullUser">
-                  To submit a classification, please log in.
+                  To remove, please log in.
                 </p>
             </form>
             <br><br>
