--- a/html/newBenchmark.html
+++ b/html/newBenchmark.html
@@ -60,13 +60,13 @@
                 <label for="threads"># of Threads:</label>
                 <input type="number" id="threads" required><br>
                 <label for="l1">L1:</label>
-                <input type="text" id="l1" required><br>
+                <input type="number" id="l1" required><br>
                 <label for="l2">L2:</label>
-                <input type="text" id="l2" required><br>
+                <input type="number" id="l2" required><br>
                 <label for="l3">L3:</label>
-                <input type="text" id="l3" required><br>
+                <input type="number" id="l3" required><br>
                 <label for="runtime">Runtime:</label>
-                <input type="text" id="runtime" required><br>
+                <input type="number" id="runtime" required><br>
                 <label for="observation">Observations:</label>
                 <input type="text" id="observation" required><br>
                 <button onclick="createNewBenchmark(event)">Submit</button>
